@@ -7,7 +7,7 @@ GammaChart.exr image/x-exr
 test.fit image/x-fits x
 test.fli video/x-flic ox
 test.gif image/gif
-test.ico image/x-ico ox
+test.ico image/x-ico
 test.im1 image/x-sun-raster x
 test.jp2 image/jp2
 test.jpg image/jpeg
@@ -37,6 +37,8 @@ test.kdc image/x-kodak-kdc
 bathead.sk image/x-skencil
 # Copied from http://www.geocities.com/CapeCanaveral/1939/256cur95.zip
 jc-win.ani application/x-navi-animation
+# Copied from http://blogs.vertigosoftware.com/alanl/archive/2006/06/28/Vista_Cursors_on_Windows_XP.aspx
+aero_alt.cur image/x-win-bitmap
 
 # Documents
 ooo-6.0.doc application/msword
